@@ -66,6 +66,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Add a &watchuser option to ApiBlock
 * (bug 26541) Generator-ise ApiQueryRecentChanges
 * action=parse now correctly returns an error for nonexistent pages
+* (bug 25767) Add userrights properties to allusers and users query lists
 
 === Languages updated in 1.18 ===
 
